# CUDA-AI-Inference-Starter

./: .gitignore  CMakeLists.txt  README.md
scripts/: profile_nsys.sh
src/: kernels.cu  kernels.cuh  main.cu
